syntax = "proto3";
package protobuf;
option go_package = "github.com/sath-run/engine/engine/daemon/protobuf";

message SystemInfo {
  HostInfo host = 1;
  CpuInfo cpu = 2;
  MemoryInfo memory = 3;
  GpuInfo gpu = 4;
}

message HostInfo {
  string err = 1;
  string os = 2;
  string platform = 3;
  string platform_family = 4;
  string platform_version = 5;
  string kernel_version = 6;
  string kernel_arch = 7;
}

message CpuInfo {
  string err = 1;
  repeated Cpu cpus = 2;
}

message Cpu {
  int32 id = 1;
  int32 cache_size = 2;
  uint64 clock = 3;
  string model_name = 4;
}

message MemoryInfo {
  string err = 1;
  uint64 total = 2;
}

message GpuInfo {
  string err = 1;
  string driver_version = 2;
  string cuda_version = 3;
  repeated Gpu gpus = 4;
}

message Gpu {
  string id = 1;
  string uuid = 2;
  string product_name = 3;
  string product_brand = 4;
  string product_architecture = 5;
  string vbios_version = 6;
  string gpu_part_number = 7;
  GpuClocks clocks = 8;
  GpuClocks max_clocks = 9;
}

message GpuClocks {
  uint64 graphics = 1;
  uint64 sm = 2;
  uint64 mem = 3;
  uint64 video = 4;
}